# A2_24542250

./: Makefile  README.md  pyproject.toml
a2/: __init__.py  dataset.py  features.py  plots.py
a2/modeling/: predict.py  train.py
code_pkg/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
code_pkg/docs/: Makefile  conf.py  example.ipynb  make.bat
code_pkg/src/code_pkg/: __init__.py
code_pkg/src/code_pkg/data/: sets.py
code_pkg/src/code_pkg/features/: dates.py  engineering.py  processing.py
code_pkg/src/code_pkg/models/: null.py  performance.py
code_pkg/tests/: test_code_pkg.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: ada_reg1.joblib  ada_reg2.joblib  adaboost_default.joblib
notebooks/Data Processing/: Data Understanding.ipynb  Data_testing.ipynb  Feature Engineering.ipynb  test_functions.ipynb
notebooks/forecasting/: thuso_dube-24542250-phophet.ipynb
notebooks/predictive/: thuso_dube_24542250_adaboost.ipynb
